[project]
name = "metplotlib"
version = "0.1.4"
description = "Meteorological plotting utilities"
authors = [
    {name = "Thomas Rieutord", email = "thomas.rieutord@gmail.com"},
]
dependencies = [
	"cartopy",
	"matplotlib",
	"numpy",
	"pyqt6>=6.10.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ThomasRieutord/metplotlib"

[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

